# STM32L4

./: CMakeLists.txt  Makefile  README.md
ADC/: README.md
ADC/src/: ADC.c  ADC.cpp  main.c  main.cpp
AML/: Makefile  README.md
AML/script/: pretty_printers.py
AML/src/: DCM.cpp  EulerAngles.cpp  Matrix33.cpp  Quaternion.cpp  Vector3.cpp  main.cpp
Blink/: CMakeLists.txt  MakeFile  build.sh
Blink/include/: stm32l432kc.h
Blink/src/: Blink.c
Core/: README.md
Core/src/: Core.cpp  main.cpp
FLASH/: inc
FLASH/src/: FLASH.c  main.c
GPIO/: README.md
GPIO/include/: GPIO.h  NRF24.h  NVIC.h  SPI.h  USART.h
GPIO/src/: GPIO.c  main.c  main.cpp
I2C/: build.sh
I2C/include/: GPIO.h  I2C.h  RCC.h  USART.h  stm32l432kc.h
I2C/scripts/: pretty_printers.py
I2C/src/: I2C.c  I2C.cpp  main.c  main.cpp
LineFollower/: README.md
LineFollower/src/: LineFollower.cpp  LineFollower.h  main.cpp
MPU/: Makefile  README.md
MPU/src/: MPU.c  MPU.cpp  main.c  main.cpp
Madgwick/: README.md  inc
Madgwick/src/: Madgwick.c  main.c
NRF24/include/: RCC.h  SPI.h  USART.h  stm32l432kc.h
NRF24/src/: NRF24.c  NRF24.cpp  main.c  main.cpp
NVIC/src/: NVIC.c  main.c
QuadCopter/: Makefile
QuadCopter/src/: QuadCopter.cpp  mahony.cpp  main.cpp
RCC/src/: RCC.c  RCC.cpp  main.c  main.cpp
SPI/src/: SPI.cpp  main.c
SWO-53de8ef789f3/: .hg_archival.txt  SWO.h  customSWO.cpp
TIMER/: README.md
TIMER/src/: TIMER.c  TIMER.cpp  main.c  main.cpp
USART/: README.md
USART/include/: GPIO.h  USART.h  stm32l432kc.h
USART/src/: GPIO.c  USART.c  USART.cpp  main.c  main.cpp
USART/startup/: startup_stm32l432xx.s
include/: ADC.h  Core.h  FLASH.h  GPIO.h  I2C.h  MPU.h  Madgwick.h  NRF24.h  NVIC.h  QuadCopter.h  RCC.h  SPI.h  TIMER.h  USART.h  core_cm4.h  startup_stm32l432xx.s  stm32l432kc.h  stm32l432xx.h
include/AML/: AML.h  DCM.h  EulerAngles.h  Matrix33.h  Quaternion.h  Vector3.h
linker/: STM32L432KCUx_FLASH.ld
